# Free-GPT4-WEB-API

./: .dockerignore  .gitignore  CLUSTER_ARCHITECTURE.md  DEPLOYMENT.md  DEVELOPMENT.md  DOCKER_LOGGING.md  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  env.example  start.sh
.github/workflows/: deploy-dev.yml  deploy-prod.yml
docs/: BRANCH_PROTECTION.md  DOCKER_OPTIMIZATION.md
llm-api-service/: .gitignore  Dockerfile  README.md  pyproject.toml  setup.py
llm-api-service/src/: __init__.py
llm-api-service/src/freegpt4/: DBManager.py  FreeGPT4_Server.py  __init__.py  ai_service.py  auth.py  config.py  database.py
llm-api-service/src/freegpt4/utils/: exceptions.py  helpers.py  http_utils.py  logging.py  provider_monitor.py  validation.py
nginx/: Dockerfile  nginx.conf
scripts/: logs.bat  logs.sh  monitor-cluster.sh  scale-api.sh  setup-branch-protection.sh  start-cluster-ssl.sh  start-cluster.sh  start-dev.sh  stop-dev.sh  test-tag-creation.sh  version-manager.sh
src/: FreeGPT4_Server.py  ai_service.py  config.py
src/data/: settings.db
src/templates/: settings.html
src/utils/: logging.py
